[package]
name = "pipe-cutter"
version = "0.1.2"
authors = ["JuanLeon Lahoz <juanleon.lahoz@gmail.com>"]
edition = "2018"
description = "Command line tool to filter out some of the data piped in"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timeout-readwrite = "*"
clap = { version = "^4", features = ["derive", "cargo"] }
